# Code_Grapher

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  skill_output_overlap_optimizer_v1.md
CodeGrapher/: __init__.py  design.md  graph.py  graph_index.py  mcp_server.py  parser_cpp.py  parser_java.py  parser_kotlin.py  parser_proto.py  parser_python.py  parser_typescript.py  parser_xml.py  run.py  schema.py  serve.py  tiered_builder.py
CodeGrapher/analyze/: call_graph.py  flow_trace.py  type_expander.py
CodeGrapher/graphs/: feature_autofill.json  feature_codegrapher.json  feature_stress.json  flow_Client_Side_utils_autofill_engine.mmd  tier_directory.json  tier_file.json  tier_repo.json  tier_symbol.json  toc.json  type_CookingSession.mmd  viewer_autofill.html  viewer_repo.html  viewer_stress.html
CodeGrapher/viewer/: graph.js  index.html  styles.css
CodeGrapherStressTest/broker/: main.cc  state_machine.cc  state_machine.h
CodeGrapherStressTest/consumer/: decoder.cc  main.cc  output.cc  output.h  processor.cc  state_machine.h
CodeGrapherStressTest/producer/: encoder.cc  legacy_encoder.cc  state_machine.cc
CodeGrapherStressTest/proto/: events.proto  legacy.proto  messages.proto
CodeGrapherStressTest/wsdl/: legacy_service.xml  legacy_types.xml
codegrapher-loop-skill/evals/: evals.json
codegrapher-loop-workspace/: NEXT_CHAT_PROMPT.md
codegrapher-loop-workspace/iteration-1/: benchmark.json  benchmark.md
codegrapher-loop-workspace/iteration-10/: eval_3_cuisine_hierarchy_sync.md  eval_4_create_tables_pg.md  eval_5_certificate_validator.md
codegrapher-loop-workspace/iteration-2/: ITERATION_2_PROMPT.md
codegrapher-loop-workspace/iteration-9/: eval_cuisine_hierarchy_loader_v3.md  eval_master_ingredients_loader_v3.md
docs/: HANDOFF_LOD_SERVER.md  HANDOFF_PRODUCER_CONSUMER.md  NEXT_SESSION_PROMPT.md  SKILL.md  SPEC.md  USAGE_GUIDE.md  backlog.md
evals/skill/: SKILL.md
evals/skill_outputs/: skill_output_ingredient_sync_manager_v1.md  skill_output_key_manager_v1.md
stress_tests/: GROUND_TRUTH.md
tests/: conftest.py  test_graph.py  test_graph_index.py  test_parser_cpp_callbacks.py  test_parser_proto_grpc.py  test_resolve_calls.py  test_tiered_builder.py
(+377 files in other folders)
