[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codegrapher"
version = "0.1.0"
description = "AST-based codebase cartography tool — parse any project into an interactive graph"
requires-python = ">=3.6"
dependencies = [
    "mcp[cli]",
    "pydantic",
    "dataclasses; python_version < '3.7'",
]

[project.scripts]
codegrapher       = "CodeGrapher.run:main"
codegrapher-serve = "CodeGrapher.serve:main"
codegrapher-mcp   = "CodeGrapher.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["CodeGrapher*"]

[tool.setuptools.package-data]
CodeGrapher = ["viewer/*"]
